# AME

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  compile.sh
include/AME/: Buffer.hpp  Core.hpp  IntervalService.hpp  ServiceManager.hpp  ThreadManager.hpp  Timeout.hpp  Work.hpp  Worker.hpp
include/AME/Interfaces/: IService.hpp  IWork.hpp
include/AME/Services/: Time.hpp
include/AME/Tools/: import.hpp
srcs/: Buffer.cpp  Core.cpp  IntervalService.cpp  ServiceManager.cpp  ThreadManager.cpp  Timeout.cpp  Worker.cpp
srcs/Services/: Time.cpp
test/: CMakeLists.txt  main.cpp  test.hpp
